--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,29 @@
+<div class="container">
 <h1>Welcome</h1>
 
 <p>Choose your room</p>
 
 <ul>
   <% @rooms.each do |room| %>
-    <li><%= room.name %></li>
+    <li><%= link_to room.name, room_path(room) %></li>
 <% end %>
 </ul>
 
-<%= form_for Room.new do |f| %>
-  <%= f.text_field :name %>
-  <%= f.submit nil, class: 'btn btn-primary' %>
+<%= form_for @room do |f| %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :message %>
+
+    <%= f.fields_for :messages do |field| %>
+      <%= field.text_field :username, placeholder: "Your username", class: 'form-control'%>
+      <%= field.text_field :body, placeholder: "Your messages", class: 'form-control'%>
+    <% end %> 
+  </div>
+  
+  <%= f.submit "Send message"%>
 <% end %>
+</div>
