--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,1 +1,27 @@
+<div class="container">
 <h1>Room: <%= @room.name %></h1>
+
+
+<div class="list-group">
+
+  <% @messages.each do |message| %>
+    <div class="list-group-item">
+      <div class="badge badge-primary m-1">
+        <%= message.username %>
+      </div>
+      <span><%= message.body %></span>
+    </div>
+  <% end %>
+</div>
+
+<%= form_for [@room, @message = Message.new(username: current_user)], remote: true do |f|  %>
+  <p>I'm not crazy right</p>
+  <div class="card card-block">
+    <div class="d-flex justify-space-between">
+      <%= f.text_field :body, class: 'form-control mr-2', placeholder: "Type your message...", required: true %>
+      <%= f.text_field :username, class: 'form-control mr-2', placceholder: "Username", required: true %>
+      <%= f.submit nil, class: 'btn btn-primary' %>
+    </div>
+  </div>
+<% end %>
+</div>
